--- a/tema1/0101.html
+++ b/tema1/0101.html
@@ -7,7 +7,8 @@
   <h3>Eksempel 1</h3>
     
   <form method="post" action="tema1/0101.php" id="eksempel1" name="eksempel1">
-    Hva er 3 ganger 3 ? <input type="text" id="svar" name="svar" required  /> <br />
+    Fornavn <input type="text" id="fornavn" name="fornavn" required  /> <br />
+    Etternavn <input type="text" id="etternavn" name="etternavn" required  /> <br />
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
     <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
