--- a/tema1/0103.html
+++ b/tema1/0103.html
@@ -9,9 +9,10 @@
   <form method="post" action="tema1/0103.php" id="eksempel3" name="eksempel3">
     Fornavn <input type="text" id="fornavn" name="fornavn" required /> <br />
     Etternavn <input type="text" id="etternavn" name="etternavn" required /> <br />
-    Alder <input type="text" id="Alder" name="Alder" required /> <br />
+    Alder <input type="number" id="Alder" name="Alder" required /> <br />
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
     <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
 </body>
+
 </html>
