--- a/tema2/0201.html
+++ b/tema2/0201.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eksempel 1</title>
+  <title>Hva er 3 ganger 3?</title>
 </head>
 <body>
-  <h3>Eksempel 1</h3>
+  <h3>Oppgave 1 i tema 2</h3>
     
   <form method="post" action="tema2/0201.php" id="eksempel1" name="eksempel1">
-    Fornavn <input type="text" id="fornavn" name="fornavn" required /> <br />
-    Etternavn <input type="text" id="etternavn" name="etternavn" required /> <br />
+    Hva er 3 ganger 3? <input type="text" id="svar" name="svar" required /> <br />
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
     <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
