--- a/tema2/0202.html
+++ b/tema2/0202.html
@@ -7,7 +7,8 @@
   <h3>Oppgave 2 i tema 2</h3>
     
   <form method="post" action="tema2/0202.php" id="eksempel1" name="eksempel1">
-    Er du student? <input type="text" id="svar" name="svar" required /> <br />
+    Er du student? <br/> Svar med ja eller nei <br/>
+    <input type="text" id="svar" name="svar" required /> <br />
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
     <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
