--- a/tema2/0203.html
+++ b/tema2/0203.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eksempel 3</title>
+  <title>Er du student?</title>
 </head>
 <body>
-  <h3>Eksempel 3</h3>
+  <h3>Oppgave 2 i tema 2</h3>
     
-  <form method="post" action="tema2/0203.php" id="eksempel3" name="eksempel3">
-    Tall 1<input type="text" id="tall1" name="tall1" required /> <br />
-    Tall 2<input type="text" id="tall2" name="tall2" required /> <br />
+  <form method="post" action="tema2/0203.php" id="eksempel1" name="eksempel1">
+    Er du student? <br/> Svar med ja eller nei <br/>
+    <input type="text" id="svar" name="svar" required /> <br />
     <input type="submit" value="Fortsett" id="fortsett" name="fortsett" />
     <input type="reset" value="Nullstill" name="nullstill" id="nullstill" /> <br />
   </form>
