--- a/tema2/0204.html
+++ b/tema2/0204.html
@@ -8,7 +8,7 @@
 <form method="post" action="tema2/0204.php" id="eksempel4" name="eksempel4">
     Er du gift? <input type="text" id="svar" name="svar" required /> <br/>
     Har du barn? <input type="text" id="svar" name="svar" required /> <br/>
-    <input type="submit" value="fortsett" name="fortsett" id="fortsett"/> <br/>
+    <input type="submit" value="Fortsett" name="Fortsett" id="Fortsett"/> <br/>
     <input type="reset" value="Nullstill" name="Nullstill" id="Nullstill"/> <br/>
 
 </form>
