--- a/tema2/0205.html
+++ b/tema2/0205.html
@@ -11,7 +11,9 @@
            Tall 1 <input type="number" id="nummer" name="nummer" required > <br/>
            Tall 2 <input type="number" id="nummer" name="nummer" required > <br/>
            Regneoperasjon <input type="number" id="operasjon" name="operasjon" required > <br/>
-           
+           <label for="tall1">Tall 1:</label>
+    <input type="number" name="tall1" id="tall1" required><br><br>
+
         </form>
         
 
