--- a/tema2/0205.html
+++ b/tema2/0205.html
@@ -8,11 +8,15 @@
         <h3>Angi to valgfri tall og et tall mellom 1 og 4</h3>
 
         <form method="post" action="tema2/0205.php" id="oppgave5" name="oppgave5">
-           Tall 1 <input type="number" id="nummer" name="nummer" required > <br/>
-           Tall 2 <input type="number" id="nummer" name="nummer" required > <br/>
-           Regneoperasjon <input type="number" id="operasjon" name="operasjon" required > <br/>
-           <label for="tall1">Tall 1:</label>
-    <input type="number" name="tall1" id="tall1" required><br><br>
+
+        <label for="tall1">Tall 1:</label>
+           <input type="number" id="nummer" name="nummer" required > <br/>
+        <label for="tall2">Tall 2:</label>
+           <input type="number" id="nummer" name="nummer" required > <br/>
+        <label for="operasjon">Velg operasjon (1=+, 2=-, 3=*, 4=/):</label>
+           <input type="number" name="operasjon" id="operasjon" min="1" max="4" required> <br><br>
+           
+    <button type="submit">Beregn</button>"
 
         </form>
         
