--- a/tema2/0205.html
+++ b/tema2/0205.html
@@ -16,7 +16,7 @@
         <label for="operasjon">Velg operasjon (1=+, 2=-, 3=*, 4=/):</label>
            <input type="number" name="operasjon" id="operasjon" min="1" max="4" required> <br><br>
            
-    <button type="submit">Beregn</button>"
+    <button type="submit">Beregn</button>
 
         </form>
         
