--- a/tema2/0204.html
+++ b/tema2/0204.html
@@ -6,8 +6,8 @@
 <h3>Er du gift?</h3>
 
 <form method="post" action="tema2/0204.php" id="eksempel4" name="eksempel4">
-    Er du gift? <input type="text" id="svar" name="svar" required /> <br/>
-    Har du barn? <input type="text" id="svar" name="svar" required /> <br/>
+    Er du gift? <input type="text" id="gift" name="gift" required /> <br/>
+    Har du barn? <input type="text" id="barn" name="barn" required /> <br/>
     <input type="submit" value="Fortsett" name="Fortsett" id="Fortsett"/> <br/>
     <input type="reset" value="Nullstill" name="Nullstill" id="Nullstill"/> <br/>
 
