--- a/tema2/0205.html
+++ b/tema2/0205.html
@@ -10,13 +10,13 @@
      <form method="post" action="tema2/0205.php" id="eksempel4" name="eksempel4">
 
         <label for="tall1">Tall 1:</label>
-           <input type="number" id="nummer" name="nummer" required > <br/>
+           <input type="number" id="tall1" name="tall1" required > <br/>
         <label for="tall2">Tall 2:</label>
-           <input type="number" id="nummer" name="nummer" required > <br/>
-        <label for="operasjon">Velg operasjon (1=+, 2=-, 3=*, 4=/):</label>
-           <input type="number" name="operasjon" id="operasjon" min="1" max="4" required> <br><br>
+           <input type="number" id="tall2" name="tall2" required > <br/>
+        <label for="tall3">Velg operasjon (1=+, 2=-, 3=*, 4=/):</label>
+           <input type="number" name="tall3" id="tall3" min="1" max="4" required> <br><br>
            
-    <button type="submit">Beregn</button>
+     <button type="submit">Beregn</button>
 
         </form>
         
