--- a/tema2/0206.html
+++ b/tema2/0206.html
@@ -11,7 +11,7 @@
 
     <form method="post" action="0206.php" id="eksempel6" name="eksempel6">
         Tall 1 : <input type="text" id="tall1" name="tall1" required><br><br>
-        Tall 2 : >input type="text" id="tall2" name="tall2" required><br><br>
+        Tall 2 : <input type="text" id="tall2" name="tall2" required><br><br>
         <input type="submit" value="Send inn" id="submit" name="submit">
         <input type="reset" value="Nullstill" id="reset" name="reset">
         </form>
