--- a/tema2/0206.html
+++ b/tema2/0206.html
@@ -9,7 +9,7 @@
 <body>
     <h3>Oppgave 6</h3>
 
-    <form method="post" action="0206.php" id="eksempel6" name="eksempel6">
+    <form method="post" action="tema2/0206.php" id="eksempel6" name="eksempel6">
         Tall 1 : <input type="text" id="tall1" name="tall1" required><br><br>
         Tall 2 : <input type="text" id="tall2" name="tall2" required><br><br>
         <input type="submit" value="Send inn" id="submit" name="submit">
