--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </ul>
 <h2>Tema 2: Valgsetninger</h2>
 <ul>
-<li><a href="tema2/0201.html">Oppgave 1</a></li>
+<li><a href="tema2/0201.php">Oppgave 1</a></li>
 <li><a href="tema2/0202.html">Oppgave 2</a></li>
 <li><a href="tema2/0203.html">Oppgave 3</a></li>
 <li><a href="tema2/0204.html">Oppgave 4</a></li>
