la til html liste for tema 3

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <li><a href="tema1/0103.html">Oppgave 3</a></li>
 
 </ul>
+
 <h2>Tema 2: Valgsetninger</h2>
 <ul>
 <li><a href="tema2/0201.php">Oppgave 1</a></li>
@@ -26,5 +27,15 @@
 <li><a href="tema2/0207.html">Oppgave 7</a></li>
 <li><a href="tema2/0208.html">Oppgave 8</a></li>
 </ul>
+
+<h2>Tema 3: Repitisjonssetninger og arrays </h2>
+<ul>
+<li><a href="tema3/0301.html">Oppgave 1</a></li>
+<li><a href="tema3/0302.html">Oppgave 2</a></li>
+<li><a href="tema3/0303.html">Oppgave 3</a></li>
+<li><a href="tema3/0304.html">Oppgave 4</a></li>
+<li><a href="tema3/0305.html">Oppgave 5</a></li>
+</ul>
+
 </body>
 </html>
