--- a/tema3/0304.html
+++ b/tema3/0304.html
@@ -6,6 +6,7 @@
     <title>Oppgave 4</title>
 </head>
 <body>
+    <h3>Oppgave 4</h3>
     
     <form action="tema3/0304.php" method="post" id="oppgave4" name="oppgave4">
         Trykk for å se summen av tallene fra 1 til 10: <br><br>
