--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 <li><a href="tema3/0303.html">Oppgave 3</a></li>
 <li><a href="tema3/0304.html">Oppgave 4</a></li>
 <li><a href="tema3/0305.html">Oppgave 5</a></li>
+<li><a href="tema3/0306.html">Oppgave 6</a></li>
+<li><a href="tema3/0307.html">Oppgave 7</a></li>
 </ul>
 
 </body>
