--- a/tema3/0306.html
+++ b/tema3/0306.html
@@ -8,7 +8,7 @@
 <body>
     
     <form action="tema3/0306.php" method="post" id="oppgave6" name="oppgave6">
-        Skriv inn et positivt heltall <input type="text" name="tall" id="tall" required>
+        Skriv inn et positivt heltall <br> <input type="text" name="tall" id="tall" required> <br><br>
         <input type="submit" value="Send inn" id="submit" name="submit">
         <input type="reset" value="Nullstill" id="reset" name="reset">
         </form>
