--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <li><a href="tema3/0305.html">Oppgave 5</a></li>
 <li><a href="tema3/0306.html">Oppgave 6</a></li>
 <li><a href="tema3/0307.html">Oppgave 7</a></li>
+<li><a href="tema3/0308.html">Oppgave 8</a></li>
 </ul>
 
 </body>
