--- a/tema3/0308.html
+++ b/tema3/0308.html
@@ -21,3 +21,7 @@
 
 </body>
 </html>
+
+// her har vi lagt inn en form action som kobler hmtl dokumentet med php filen, 
+// også har vi lagt inn 5 input type former der hver form har sitt eget navn og id. ID kobles til php filen for å hente informasjon.
+// deretter har vi lagt inn en input type submit som får skjemaet til å sende informasjonen til php filen.
