--- a/tema4/0401.html
+++ b/tema4/0401.html
@@ -10,6 +10,10 @@
     <h1>Oppgave 1</h1>
     
 <form action="tema4/0401.php" method="post" id="oppgave1" name="oppgave1">
-    
+    Postnr <input type="text" id="postnr" name="postnr" required> <br><br>
+    <input type="submit" value="Registrer postnr" id="submit" name="submit">
+    <input type="reset" value="Nullstill" id="reset" name="reset">
+</form>
+
 </body>
 </html>
