--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
 <li><a href="tema3/0308.html">Oppgave 8</a></li>
 </ul>
 
+<h2> Tema 4: Funksjoner og validering</h2>
+<ul>
+<li><a href="tema4/0401.html">Oppgave 1</a></li>
+<li><a href="tema4/0402.html">Oppgave 2</a></li>
+<li><a href="tema4/0403.html">Oppgave 3</a></li>
+<li><a href="tema4/0404.html">Oppgave 4</a></li>
+<li><a href="tema4/0405.html">Oppgave 5</a></li>
+</ul>
+
 </body>
 </html>
