--- a/tema4/0404.html
+++ b/tema4/0404.html
@@ -10,7 +10,7 @@
     <h1>Oppgave 4</h1>
 
     <form action="tema4/0404.php" method="post" id="oppgave4" name="oppgave4">
-        Postnummer (4 siffer): <input type="text" id="postnummer" name="postnummer" required> <br><br>
+        Postnummer (4 siffer): <input type="text" id="postnr" name="postnr" required> <br><br>
         <input type="submit" value="Send inn" id="submit" name="submit">
         <input type="reset" value="Nullstill" id="reset" name="reset">
     </form>
