--- a/index.html
+++ b/index.html
@@ -48,5 +48,10 @@
 <li><a href="tema4/0405.html">Oppgave 5</a></li>
 </ul>
 
+<h2> Tema 5: Databasehåndtering</h2>
+<ul>
+<li><a href="tema5/index.php">index</a></li>
+</ul>
+
 </body>
 </html>
