tema 6 skjekk bokser

--- a/index.html
+++ b/index.html
@@ -53,5 +53,10 @@
 <li><a href="tema5/index.php">index</a></li>
 </ul>
 
+<h2> Tema 6: Databasehåndtering 2</h2>
+<ul>
+<li><a href="tema6/0601.php">Statisk skjekkbokser</a></li>
+</ul>
+
 </body>
 </html>
