--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <h2> Tema 6: Databasehåndtering 2</h2>
 <ul>
 <li><a href="tema6/0601.php">Statisk skjekkbokser</a></li>
+<li><a href="tema6/0602.php">Statisk listeboks</a></li>
 </ul>
 
 </body>
